# uc-launcher

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.pt.md  bun.lockb  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.tsx  globals.css  main.tsx  variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/libs/: discord.rs
src-tauri/src/structs/: discord.rs
src/components/: AppMenu.tsx  Appbar.tsx  ThemeProvider.css  ThemeProvider.tsx  index.ts
src/components/ui/: Sidebar.tsx
src/contexts/: SidebarContext.tsx  ThemeContext.tsx
src/hooks/: index.ts  useDiscordPresence.ts  useDiscordRichPresence.ts  useTheme.ts  useThemedClassnames.ts
src/libs/: store.ts
src/screens/: HomeScreen.tsx  SettingsScreen.tsx
src/types/: theme.ts
